# Moveit2_study

./: README.md  package.xml
Franka_Sigma_ws/: README.md
Franka_Sigma_ws/install/: local_setup.sh  setup.sh
Franka_Sigma_ws/install/franka_pose_control/share/franka_pose_control/: local_setup.sh  package.sh
Franka_Sigma_ws/install/sigma7/share/sigma7/: local_setup.sh  package.sh
franka_move2target_cpp/: CMakeLists.txt  package.xml  readMe.txt
franka_move2target_cpp/src/: franka_controller_cpp.cpp  franka_jointState_listener.cpp  franka_targetPose_publisher.cpp
franka_moveit_config/launch/: franka_moveit.launch.py
franka_moveit_my/: CMakeLists.txt  package.xml
franka_moveit_my/src/: README.md  follow_target.cpp  franka_target_pub.cpp  hello_moveit.cpp
franka_sigma_follow/: CMakeLists.txt  README.md  package.xml
franka_sigma_follow/src/: franka_follow_sigma.cpp  franka_target_publisher.cpp
moveit2_example/: CMakeLists.txt
moveit2_example/launch/: moveit2_example1.launch.py
moveit2_example/src/: moveit2_example1.cpp
